<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">居住证受理终端</string>
    <string name="app_name_qx">居住证受理终端</string>
    <string name="login_user">管理员账号</string>
    <string name="login_pwd">管理员密码</string>
    <string name="login_rem_pwd">记住密码</string>
    <string name="login_aotu_login">自动登录</string>
    <string name="reset">重置</string>
    <string name="login">登录</string>
    <string name="baocun">保存</string>
    <string name="fanhui">返回</string>
    <string name="frame_fhsy">返回首页</string>
    <string name="frame_cxdl">重新登录</string>
    <string name="frame_tcxt">退出系统</string>
    <string name="login_imsi">IMSI：</string>
    <string name="login_ip">IP地址:</string>
    <string name="queding">确定</string>
    <string name="tijiao">提交</string>
    <string name="fwhc">房屋核查</string>
    <string name="gltz">管理台账(服务站)</string>
    <string name="tzgg">通知公告</string>
    <string name="sjsb">事件登记</string>
    <string name="sjName">事件名称:</string>
    <string name="sjCatagary">事件类别:</string>
    <string name="fsAddress">发生地点:</string>
    <string name="fsDate">发生日期:</string>
    <string name="fsTime">发生时间:</string>
    <string name="jtDescription">具体描述:</string>
    <string name="isEnd">是否完结:</string>
    <string name="sjPhoto">事件拍照:</string>
    <string name="record">录音:</string>
    <string name="play">播放</string>
    <string name="djrecord">点击开始录音</string>
    <string name="sjfk">事件反馈</string>
    <string name="sjcx">事件查询</string>
    <string name="sjBasicInfo">事件基本信息</string>
    <string name="sjpicture">事件照片:</string>
    <string name="sjluyin">事件录音:</string>
    <string name="lishichuzhixinxi">历史处置信息</string>
    <string name="chuzhidanwei">处置单位:</string>
    <string name="chuzhiriqi">处置日期:</string>
    <string name="chuzhifangshi">处置方式:</string>
    <string name="jieshoudanwei">接收单位:</string>
    <string name="chuzhineirong">处置内容:</string>
    <string name="dangqianchuzhixinxi">当前处置信息</string>
    <string name="fankuineirong">反馈内容:</string>
    <string name="shifouwanjie">是否完结:</string>
    <string name="shi">是:</string>
    <string name="fou">否:</string>
    <string name="biaoti">标题</string>
    <string name="date">日期</string>
    <string name="ggxq">公告详情</string>
    <string name="djkbls">登记卡办理数</string>
    <string name="wzkrs">未制卡人数</string>
    <string name="djslrs">登记受理人数</string>
    <string name="fwlb">房屋列表</string>
    <string name="gxfw">管辖房屋</string>
    <string name="fwbc">房屋补采</string>
    <string name="fwdj">房屋采集</string>
    <string name="suoshuxiaqu">所属辖区：</string>
    <string name="tianbiaoriqi">填表日期：</string>
    <string name="fangwuleixing">房屋类型：</string>
    <string name="jianshexingzhi">建设性质：</string>
    <string name="qunzufangleixing">群租房类型：</string>
    <string name="qitafangwuleixing">其他房屋类型：</string>
    <string name="qitajianshexingzhi">其他建设性质：</string>
    <string name="fangwusuozaidizhi">房屋所在地址：</string>
    <string name="qitajianzhuleixing">其他建筑类型：</string>
    <string name="jianzhuleixing">建筑类型：</string>
    <string name="fangchanzhenghao">房产证号：</string>
    <string name="fangzhuxinxi">房主信息</string>
    <string name="suoyouquanleixing">所有权类型：</string>
    <string name="chuzurenleixing">出租人类型：</string>
    <string name="gerenfangzhuxinxi">个人房主信息</string>
    <string name="fangzhuxingming">房主姓名：</string>
    <string name="zhengjianleixing">证件类型：</string>
    <string name="qitazhengjian">其他证件：</string>
    <string name="zhengjianhaoma">证件号码：</string>
    <string name="shenfenzhenghao">身份证号：</string>
    <string name="chushengriqi">出生日期：</string>
    <string name="xingbie">性别：</string>
    <string name="hujidi">户籍地：</string>
    <string name="guoji">国籍：</string>
    <string name="zhengzhimianmao">政治面貌：</string>
    <string name="lianxidianhua">联系电话：</string>
    <string name="danweifangzhuxinxi">单位房主信息</string>
    <string name="danweimingcheng">单位名称：</string>
    <string name="fuzerenxingming">负责人姓名：</string>
    <string name="fuzerenlianxidianhua">负责人电话：</string>
    <string name="zhongjiegongsixinxi">中介公司信息</string>
    <string name="gongsimingcheng">公司名称：</string>
    <string name="fangwufuzerenxingming">房屋负责人姓名：</string>
    <string name="zhuanzurenxinxi">转租人信息</string>
    <string name="zhuanzurenxingming">转租(委托)人姓名：</string>
    <string name="chuzuxinxi">出租信息</string>
    <string name="chuzujianshu">出租间数：</string>
    <string name="pingfangmi">平方米</string>
    <string name="fangwucengshu">房屋层数：</string>
    <string name="ceng">层</string>
    <string name="anquanyinhuan">安全隐患：</string>
    <string name="you">有</string>
    <string name="wu">无</string>
    <string name="buwendingfengxian">不稳定风险</string>
    <string name="zhianyinhuan">治安隐患</string>
    <string name="xiaofangyinhuan">消防隐患</string>
    <string name="jianzhuanquan">建筑安全</string>
    <string name="chuzuyongtu">出租用途：</string>
    <string name="qitachuzuyongtu">其他出租用途：</string>
    <string name="zuzhurenshu">租住人数：</string>
    <string name="benshi">本市</string>
    <string name="ren">人,</string>
    <string name="person">人</string>
    <string name="waishengshi">外省市</string>
    <string name="gangaotai">港澳台</string>
    <string name="waiji">外籍</string>
    <string name="zujin">租金：</string>
    <string name="yuezu">月租</string>
    <string name="nianzu">年租</string>
    <string name="zulinhetong">租赁合同：</string>
    <string name="nashui">纳税：</string>
    <string name="dengjibeian">登记备案：</string>
    <string name="qiandingzerenshu">签订责任书：</string>
    <string name="zhian">治安</string>
    <string name="xiaofang">消防</string>
    <string name="hunyu">婚育</string>
    <string name="qiandingzerenshuriqi">签订责任书日期：</string>
    <string name="chuzuqishiriqi">出租起始日期：</string>
    <string name="chuzujiezhiriqi">出租截止日期：</string>
    <string name="fwzx">房屋注销</string>
    <string name="fwxg">房屋修改</string>
    <string name="fzName">房主姓名:</string>
    <string name="djNumber">登记表序号:</string>
    <string name="fwBasicInfo">房屋基本信息</string>
    <string name="fwczInfo">房屋出租信息</string>
    <string name="fwAddress">房屋详细地址:</string>
    <string name="czAction">出租用途:</string>
    <string name="czCount">出租间数:</string>
    <string name="czStartDate">出租起始时间:</string>
    <string name="czEndDate">出租截止时间:</string>
    <string name="fwzzPerson">查看该房屋租住人员</string>
    <string name="zhuxiao">注销</string>
    <string name="bucai">补采</string>
    <string name="xiugai">修改</string>
    <string name="name">张雪君</string>
    <string name="info">该房屋共有0人,将同时被注销。</string>
    <string name="fwzxReason">房屋注销原因:</string>
    <string name="ryzxReason">人员注销原因:</string>
    <string name="stop">停止租赁</string>
    <string name="leave">离开本地</string>
    <string name="fwInfo">房屋信息</string>
    <string name="bcInfo">补采信息</string>
    <string name="syqlx">所有权类型:</string>
    <string name="geren">个人</string>
    <string name="ssxq">所属辖区:</string>
    <string name="bbd">半壁店</string>
    <string name="shjz">生活居住</string>
    <string name="syyt">商业用途:</string>
    <string name="cc">仓储</string>
    <string name="zpyl">照片预览:</string>
    <string name="fwxxdz">北京市大兴区魏善庄镇北田中街西十条12号内1号</string>
    <string name="jian">间</string>
    <string name="pingmi">平米</string>
    <string name="czCatagory">出租类别:</string>
    <string name="ptczfw">普通出租房屋类</string>
    <string name="rent">租金:</string>
    <string name="month">月</string>
    <string name="yuan">元</string>
    <string name="back">返回首页</string>
    <string name="re_login">重新登录</string>
    <string name="exit">退出系统</string>
    <string name="xm">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="xb">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="mz">民&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;族</string>
    <string name="zjhm">证件号码</string>
    <string name="csrq">出生日期</string>
    <string name="hjdz">户籍地址</string>
    <string name="xzdz">现住地址</string>

    <string name="nan">男</string>
    <string name="nv">女</string>

    <string name="case1">汉</string>
    <string name="case2">蒙古</string>
    <string name="case3">回</string>
    <string name="case4">藏</string>
    <string name="case5">维吾尔</string>
    <string name="case6">苗</string>
    <string name="case7">彝</string>
    <string name="case8">壮</string>
    <string name="case9">布依</string>
    <string name="case10">朝鲜</string>
    <string name="case11">满</string>
    <string name="case12">侗</string>
    <string name="case13">瑶</string>
    <string name="case14">白</string>
    <string name="case15">土家</string>
    <string name="case16">哈尼</string>
    <string name="case17">哈萨克</string>
    <string name="case18">傣</string>
    <string name="case19">黎</string>
    <string name="case20">傈傈</string>
    <string name="case21">佤</string>
    <string name="case22">畲</string>
    <string name="case23">高山</string>
    <string name="case24">拉祜</string>
    <string name="case25">水</string>
    <string name="case26">东乡</string>
    <string name="case27">纳西</string>
    <string name="case28">景颇</string>
    <string name="case29">柯尔克孜</string>
    <string name="case30">土</string>
    <string name="case31">达斡尔</string>
    <string name="case32">仫佬</string>
    <string name="case33">羌</string>
    <string name="case34">布朗族</string>
    <string name="case35">撒拉</string>
    <string name="case36">毛南</string>
    <string name="case37">仡佬</string>
    <string name="case38">锡伯</string>
    <string name="case39">阿昌</string>
    <string name="case40">普米</string>
    <string name="case41">塔吉克</string>
    <string name="case42">怒</string>
    <string name="case43">乌兹别克</string>
    <string name="case44">俄罗斯</string>
    <string name="case45">鄂温克</string>
    <string name="case46">德昂</string>
    <string name="case47">保安</string>
    <string name="case48">裕固</string>
    <string name="case49">京</string>
    <string name="case50">塔塔尔</string>
    <string name="case51">独龙</string>
    <string name="case52">鄂伦春</string>
    <string name="case53">赫哲</string>
    <string name="case54">门巴</string>
    <string name="case55">珞巴</string>
    <string name="case56">基诺</string>
    <string name="defaultminzu">解析出错</string>
    <string name="find">发现身份证!</string>
    <string name="get">正在获取身份证信息...</string>
    <string name="getsuccess">读取身份证信息成功!</string>
</resources>